# claude-code-api

./: .gitignore  Claude_CLI_vs_Anthropic_API_Comparison.md  PLAN.md  README.md  comprehensive_cli_verification.py  environment.yml  pyproject.toml
src/: claude_interface.py  database.py  main.py
src/models/: config.py  openai.py
src/routes/: openai.py
tests/: test_database.py  test_integration.py  test_live_server.py  test_models.py
